--- a/NativePlugin/config.h.in
+++ b/NativePlugin/config.h.in
@@ -1,2 +1,3 @@
 #cmakedefine GFX_SUPPORTS_D3D9
-#cmakedefine GFX_SUPPORTS_OPENGL_UNIFIED
+#cmakedefine GFX_SUPPORTS_OPENGL_UNIFIED 1
+#cmakedefine ENABLE_MULTITHREADED_PARTICLES 1
